src/styles/App.css
* {
    box-sizing: border-box;
}

body {
    margin: 0;
    padding: 0;
}

.App {
    border: 1px solid black;
    padding: 14px;
    margin: auto;
    width: 600px;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

Button {
    height: 40px;
    width: 80px;
    outline: none;
    border: none;
    background-color: rgb(112, 112, 112);
    color: white;
    border-radius: 5px;
}

.removeButton {
    justify-self: end;
    height: 20px;
}

Button:hover {
    cursor: pointer;
    background-color: rgb(120, 120, 120);
}

.section {
    width: 80%;
    display: flex;
    flex-direction: column;
    align-items: center;
}

ul {
    margin: 0;
    padding: 0;
    list-style: none;
    width: 100%;
}

li {
    display: flex;
    justify-content: space-between;
    margin-bottom: 5px;
}

.dataLabel {
    font-weight: bold;
}

li.educationalElem {
    display: grid;
    grid-template-columns: 1fr 1fr;
    grid-template-rows: auto;
    gap: 5px;
    margin-bottom: 15px;
    padding-bottom: 5px;
    border-bottom: 1px solid black;
}

li p {
    margin: 0;
}

.schoolName {
    grid-column: 1 / 2;
    grid-row: 1 / 2;
}

.titleOfStudy {
    grid-column: 2 / 3;
    grid-row: 1 / 2;
    text-align: end;
}

.gradutation {
    grid-column: 1 / 2;
    grid-row: 2 / 3;
}

.experiencesDiv {
    width: 100%;
    display: flex;
    flex-direction: column;
    align-items: center;
}

